--- a/app/presentation/template/datatables.html
+++ b/app/presentation/template/datatables.html
@@ -10,61 +10,29 @@
 
     {% if table_config %}
         <div class="container-fluid center">
-                    {% if table_config.filters %}
-                        <div class="flex-container">
-                            {% for f in table_config.filters %}
-                                {% if f.type == "select" %}
-                                    <div class="form-group "><label class="control-label" for="{{ f.name }}"
-                                                                    title="{{ f.tt }}">{{ f.label }}</label>
-                                        <select class="form-control table-filter" id="{{ f.name }}"
-                                                name="{{ f.name }} {{ f.multiple }}">
-                                            {% for o in f.choices %}
-                                                <option value="{{ o[0] }}"
-                                                        {% if o[0] == f.default %}selected{% endif %}>{{ o[1] }}</option>
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-                                {% endif %}
-                                {% if f.type == "datepicker" %}
-                                    <div class="form-group "><label class="control-label"
-                                                                    for="{{ f.name }}">{{ f.label }}</label>
-                                        <br><input id="{{ f.name }}" name="{{ f.name }}" class="table-filter">
-                                    </div>
-                                {% endif %}
-                                {% if f.type == "checkbox" %}
-                                    {% for b in f.boxes %}
-                                        <input type="checkbox" class="form-control table-filter" id="{{ b[0] }}"
-                                               name="{{ b[0] }}" value="{{ b[0] }}">
-                                        <label for="{{ b[0] }}">{{ b[1] }}</label>
-                                    {% endfor %}
-                                {% endif %}
-                            {% endfor %}
-                            <button class="btn btn-danger" type="button" onclick="clear_filter_setting()">Reset</button>
-                        </div>
-                        <hr class="divider-line">
-                    {% endif %}
-                    <div class="column-visible-div flex-container">Kolom zichtbaar:&nbsp;</div>
-                    <hr class="divider-line">
+            <div class="flex-container filter-menu"></div>
+            <div class="column-visible-div flex-container">Kolom zichtbaar:&nbsp;</div>
+            <hr class="divider-line">
 
-                    <table class="right-click-canvas table table-striped table-bordered wrap" id="datatable">
-                        <thead>
-                        <tr>
-                            {% if 'row_detail' in config %}
-                                <th></th>
-                            {% endif %}
-                            {% for h in table_config.template %}
-                                {% if h.name=='row_action' %}
-                                    <th><input type='checkbox' id="select_all"></th>
-                                {% elif h.name=='reviewed' %}
-                                    <th><img src="static/img/reviewed.png" style="width:20px;height:20px;"
-                                             title="Reeds gecontroleerd?"></th>
-                                {% else %}
-                                    <th title="{{ h.tt if 'tt' in h else '' }}">{{ h.name }}</th>
-                                {% endif %}
-                            {% endfor %}
-                        </tr>
-                        </thead>
-                    </table>
+            <table class="right-click-canvas display" id="datatable">
+                <thead>
+                <tr>
+                    {% if 'row_detail' in config %}
+                        <th></th>
+                    {% endif %}
+                    {% for h in table_config.template %}
+                        {% if h.name=='row_action' %}
+                            <th><input type='checkbox' id="select_all"></th>
+                        {% elif h.name=='reviewed' %}
+                            <th><img src="static/img/reviewed.png" style="width:20px;height:20px;"
+                                     title="Reeds gecontroleerd?"></th>
+                        {% else %}
+                            <th title="{{ h.tt if 'tt' in h else '' }}">{{ h.name }}</th>
+                        {% endif %}
+                    {% endfor %}
+                </tr>
+                </thead>
+            </table>
         </div>
     {% endif %}
 {% endblock %}
@@ -72,16 +40,11 @@
 {% block scripts %}
     {{ super() }}
     {% if table_config %}
-        <script type="module">
-            import {clear_filter_setting} from "/static/js/datatables/dt.js";
-            window.clear_filter_setting = clear_filter_setting;
-        </script>
-
         <script>
             const table_config = {{ (table_config or []) | tojson }};
             const current_user_is_at_least_admin = {{ current_user.is_at_least_admin | tojson }};
         </script>
-{#        <script type="module" src="/static/js/datatables/cell_edit.js"></script>#}
+        <script type="module" src="/static/js/datatables/cell_edit.js"></script>
         <script type="module" src="/static/js/datatables/dt.js"></script>
     {% endif %}
 {% endblock %}
