--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -78,13 +78,13 @@ main li {
 }
 
 footer {
+  height: 30px;
   background-color: #333;
   color: white;
-  padding: 10px;
+  padding: 5px;
   text-align: center;
   bottom: 0;
   left: 0;
   width: 100%;
   z-index: 1000; /* Keep it above other content */
 }
-
