--- a/app/presentation/template/base.html
+++ b/app/presentation/template/base.html
@@ -5,40 +5,54 @@
     <title>{{ title }}</title>
     {% block styles %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css"/>
-    <link rel='stylesheet' href='https://cdn.form.io/formiojs/formio.full.min.css'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.form.io/formiojs/formio.form.min.css" crossorigin="anonymous">
-    <link href="static/css/main.css" rel="stylesheet">
-    <link href="static/css/base.css" rel="stylesheet">
-    <link href="static/css/popup.css" rel="stylesheet">
-    <link href="static/css/context_menu.css" rel="stylesheet">
-    {% block header %}{% endblock %}
-    <link rel="shortcut icon" href="static/img/lis.png">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+              integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+              crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css"
+              href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css"/>
+        <link rel='stylesheet' href='https://cdn.form.io/formiojs/formio.full.min.css'>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.form.io/formiojs/formio.form.min.css" crossorigin="anonymous">
+        <link href="static/css/main.css" rel="stylesheet">
+        <link href="static/css/base.css" rel="stylesheet">
+        <link href="static/css/popup.css" rel="stylesheet">
+        <link href="static/css/context_menu.css" rel="stylesheet">
+        {% block header %}{% endblock %}
+        <link rel="shortcut icon" href="static/img/lis.png">
     {% endblock %}
 </head>
 
 <body>
-    <nav>
+<nav>
+    <div>
         <div>
             <img src="{{ url_for('static', filename='img/warning.png') }}" alt="" height="40">
             <img src="{{ url_for('static', filename='img/computer-repair.png') }}" alt="" height="40">
-                {% if current_user.is_authenticated %}
-                    <ul id="navbar"></ul>
-                {% endif %}
+            {% if current_user.is_authenticated %}
+                <ul id="navbar"></ul>
+            {% endif %}
         </div>
-        <a href="{{ url_for('auth.logout') }}"><button class="btn btn-success navbar-btn">Logout</button></a>&nbsp;&nbsp;
+        <a href="{{ url_for('auth.logout') }}">
+            <button class="btn btn-success navbar-btn">Logout</button>
+        </a>&nbsp;&nbsp;
         <a style="white-space: nowrap;">Hi, {{ current_user.username }}!</a>
-    </nav>
 
-    <main>
-        {% block body %}
-        {% endblock %}
-    </main>
+    </div>
+    <div>
+        <div class="filter-menu-placeholder"></div>
+    </div>
+    <div>
+        <div class="column-visible-placeholder">Kolom zichtbaar:&nbsp;</div>
+    </div>
+</nav>
 
-    <footer><p class="copyright text-muted small">{{ version }}</p></footer>
+<main>
+    {% block body %}
+    {% endblock %}
+</main>
+
+<footer><p class="copyright text-muted small">{{ version }}</p></footer>
 {% block scripts %}
     {{ JSGlue.include() }}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -62,6 +76,7 @@
 
     <script type="module">
         import {socketio} from "../../static/js/common/socketio.js";
+
         socketio.init();
     </script>
     <script type="module" src="/static/js/base.js"></script>
