--- a/app/presentation/template/base.html
+++ b/app/presentation/template/base.html
@@ -13,7 +13,6 @@
         <link rel='stylesheet' href='https://cdn.form.io/formiojs/formio.full.min.css'>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
               crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.form.io/formiojs/formio.form.min.css" crossorigin="anonymous">
         <link href="static/css/main.css" rel="stylesheet">
         <link href="static/css/base.css" rel="stylesheet">
         <link href="static/css/popup.css" rel="stylesheet">
@@ -40,10 +39,13 @@
 
     </div>
     <div>
+        <div class="button-menu-placeholder"></div>
+    </div>
+    <div>
         <div class="filter-menu-placeholder"></div>
     </div>
     <div>
-        <div class="column-visible-placeholder">Kolom zichtbaar:&nbsp;</div>
+        <div class="column-visible-placeholder"></div>
     </div>
 </nav>
 
@@ -55,13 +57,13 @@
 <footer><p class="copyright text-muted small">{{ version }}</p></footer>
 {% block scripts %}
     {{ JSGlue.include() }}
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/6.0.0/bootbox.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-            crossorigin="anonymous"></script>
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
     <script src='https://cdn.form.io/formiojs/formio.full.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"
             integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ=="
@@ -76,7 +78,6 @@
 
     <script type="module">
         import {socketio} from "../../static/js/common/socketio.js";
-
         socketio.init();
     </script>
     <script type="module" src="/static/js/base.js"></script>
