--- a/app/presentation/template/login.html
+++ b/app/presentation/template/login.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="static/css/login.css" rel="stylesheet">
     <link href="static/css/popup.css" rel="stylesheet">
     {{ JSGlue.include() }}
@@ -40,11 +42,17 @@
         <p class="copyright text-muted small">{{ version }}</p>
     </footer>
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/6.0.0/bootbox.min.js"></script>
 <script type="module">
-    import {TimedPopup} from "../../static/js/common/popup.js";
-    const message = {{ message|tojson or null }};
-    if (message) new TimedPopup(message.status, message.data);
+    import {AlertPopup} from "../../static/js/common/popup.js";
+    $(document).ready(function () {
+        const message = {{ message|tojson or null }};
+        if (message) new AlertPopup(message.status, message.data);
+    });
 </script>
 </body>
 </html>
