--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -128,3 +128,23 @@ footer {
     display: contents;
     margin-right: 3px;
 }
+
+.button-menu-placeholder > button {
+    color: #fff;
+    background-color: #f8c604;
+    border-color: #f8c604;
+    margin: 0;
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-right: 5px;
+}
+.button-menu-placeholder > * {
+    line-height: normal;
+}
+
+.button-menu-placeholder label {
+    margin-bottom: 0;
+    margin-right: 3px;
+}
