--- a/app/presentation/template/base.html
+++ b/app/presentation/template/base.html
@@ -10,7 +10,7 @@
               crossorigin="anonymous">
         <link rel="stylesheet" type="text/css"
               href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css"/>
-        <link rel='stylesheet' href='https://cdn.form.io/formiojs/formio.full.min.css'>
+        <link rel='stylesheet' href='https://cdn.form.io/js/5.0.0/formio.full.min.css'>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
               crossorigin="anonymous">
         <link href="static/css/main.css" rel="stylesheet">
@@ -64,7 +64,7 @@
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/6.0.0/bootbox.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
-    <script src='https://cdn.form.io/formiojs/formio.full.min.js'></script>
+    <script src='https://cdn.form.io/js/5.0.0/formio.full.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"
             integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ=="
             crossorigin="anonymous"></script>
