--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -1,5 +1,6 @@
 .form-row {
     display: flex;
+    margin-bottom: 10px;
 }
 
 .form-row > * {
@@ -18,4 +19,30 @@
 .form-element > * {
     display: inline-block;
     margin-right: 10px;
+}
+
+.form-element > label {
+    display: flex;
+    align-items: center;
+}
+
+.form-element > label > input {
+    vertical-align: middle;
+    margin-top: 0;
+}
+
+.form-element > label > textarea {
+    line-height: 1;
+    padding-left: 2px;
+}
+
+.form-element > label > * {
+    margin-left: 10px;
+    margin-right: 5px;
+}
+
+.form-element select, .form-element input {
+    height: 28px;
+    border: 1px solid #aaa;
+    border-radius: 4px;
 }
