--- a/app/presentation/template/incident.html
+++ b/app/presentation/template/incident.html
@@ -3,7 +3,7 @@
 {% block scripts %}
     {{ super() }}
     <script>
-        let data = {{ (data or {})|tojson }};
+        let view_data = {{ (view_data or {})|tojson }};
     </script>
     <script type="module" src="/static/js/project/incident.js"></script>
 {% endblock %}
