--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -46,3 +46,9 @@
     border: 1px solid #aaa;
     border-radius: 4px;
 }
+.form-element th, .form-element td {
+    border-width: 1px;
+    border: black;
+    border-style: solid;
+    text-align: center;
+}
