--- a/app/presentation/template/base.html
+++ b/app/presentation/template/base.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
               crossorigin="anonymous">
         <link href="static/css/main.css" rel="stylesheet">
+        <link href="static/css/filter.css" rel="stylesheet">
         <link href="static/css/base.css" rel="stylesheet">
         <link href="static/css/popup.css" rel="stylesheet">
         <link href="static/css/context_menu.css" rel="stylesheet">
@@ -69,7 +70,7 @@
             integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ=="
             crossorigin="anonymous"></script>
     <script>
-        const current_user_level = {{ (current_user.level or 0)|tojson }};
+        const current_user = {level: {{(current_user.level or null)|tojson}}, username: {{(current_user.username or null)|tojson }}};
         const stand_alone = {{ (stand_alone or False)|tojson }};
         const default_view = {{ (default_view or False)|tojson }};
         const suppress_navbar = {{ (suppress_navbar or False)|tojson}};
