--- a/app/presentation/template/lib/history_form.html
+++ b/app/presentation/template/lib/history_form.html
@@ -12,7 +12,7 @@
     </div>
     <div class="form-row" id="owner-row">
         <div class="form-element">
-            <label>Eigenaar<input id="owner-field" name="owner_name"></label>
+            <label>Eigenaar<input id="owner-field" name="laptop_owner_name"></label>
         </div>
     </div>
     <div class="form-row">
@@ -23,7 +23,7 @@
     <div class="form-row">
         <div class="form-element">
             <table id="history-table">
-                <tr><th>Code</th><th>Prio</th><th>Status</th><th>Locatie</th><th>Info</th><th>Datum</th><th>Type</th><th>Val</th><th>Water</th></tr>
+                <tr><th>Hersteller</th><th>Prio</th><th>Status</th><th>Locatie</th><th>Info</th><th>Datum</th><th>Type</th><th>Val</th><th>Water</th></tr>
             </table>
         </div>
     </div>
