--- a/app/presentation/template/base.html
+++ b/app/presentation/template/base.html
@@ -13,6 +13,7 @@
         <link rel='stylesheet' href='https://cdn.form.io/js/5.0.0/formio.full.min.css'>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
               crossorigin="anonymous">
+        <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
         <link href="static/css/main.css" rel="stylesheet">
         <link href="static/css/filter.css" rel="stylesheet">
         <link href="static/css/base.css" rel="stylesheet">
