--- a/app/presentation/template/lib/incident_form_update.html
+++ b/app/presentation/template/lib/incident_form_update.html
@@ -2,7 +2,6 @@
 <form id="incident-form">
     <div class="form-row">
         <div class="form-element"><label>Type laptop<input name="laptop_type" disabled></label></div>
-        <div class="form-element"><label>Locatie<input name="location" disabled></label></div>
         <div class="form-element"><label>Status<input name="incident_state" disabled></label></div>
     </div>
     <div class="form-row">
@@ -14,6 +13,15 @@
     <div class="form-row">
         <div class="form-element"><label>Laptop<input name="laptop_name" disabled></label></div>
     </div>
+
+    <div class="form-row">
+        <div class="form-element">
+            <label>Locatie
+                <select id="location-field" name="location"></select>
+            </label>
+        </div>
+    </div>
+
     <div class="form-row">
         <div class="form-element">
             <label>Wachtwoord<input id="password-field" name="laptop_owner_password"></label>
@@ -58,7 +66,8 @@
     </div>
     <div class="form-row">
         <div class="form-element">
-            <label>Info<textarea id="info-field" rows="6" cols="80" style="line-height: 1" name="info"></textarea></label>
+            <label>Info<textarea id="info-field" rows="6" cols="80" style="line-height: 1"
+                                 name="info"></textarea></label>
         </div>
     </div>
 </form>
