--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -117,8 +117,8 @@ footer {
 }
 
 .filter-form-control {
-    color: #495057;
-    background-color: #fff;
+    margin-right: 10px;
+    padding: 1px;
     background-clip: padding-box;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
