--- a/app/presentation/template/lib/incident_form_new.html
+++ b/app/presentation/template/lib/incident_form_new.html
@@ -36,7 +36,7 @@
     </div>
     <div class="form-row">
         <div class="form-element">
-            <label>Wachtwoord<input id="password-field" name="laptop_owner_password"></label>
+            <label>Wachtwoord<input type="password" id="password-field" name="laptop_owner_password"></label>
         </div>
         <div class="form-element">
             <label><input type="checkbox" id="password-default-chk" name="laptop_owner_password_default">Standaard paswoord?</label>
