--- a/app/presentation/template/lib/incident_form_update.html
+++ b/app/presentation/template/lib/incident_form_update.html
@@ -19,7 +19,8 @@
     </div>
 
     <div class="form-row">
-        <div class="form-element"><label>Wachtwoord<input id="password-field" name="laptop_owner_password"></label></div>
+        <div class="form-element"><label>Wachtwoord<input id="password-field" type="password" name="laptop_owner_password"></label></div>
+        <div class="form-element"><i id="password-show-field" class="fa-regular fa-eye-slash"></i></div>
         <div class="form-element"><label><input type="checkbox" id="password-default-chk" name="laptop_owner_password_default">Standaard paswoord?</label></div>
     </div>
     <div class="form-row">
