--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -29,6 +29,7 @@
 .form-element > label > input {
     vertical-align: middle;
     margin-top: 0;
+    padding-left: 3px;
 }
 
 .form-element > label > textarea {
