--- a/app/presentation/template/lib/history_form.html
+++ b/app/presentation/template/lib/history_form.html
@@ -7,7 +7,7 @@
     </div>
     <div class="form-row">
         <div class="form-element">
-            <label>LIS badgenummer<input id="lis-badge-field" name="lis_badge_id" class="form-group-1"></label>
+            <label>LIS badgenummer<input id="lis-badge-field" name="lis_badge_id" disabled></label>
         </div>
     </div>
     <div class="form-row" id="owner-row">
