--- a/app/presentation/template/base.html
+++ b/app/presentation/template/base.html
@@ -16,6 +16,7 @@
               crossorigin="anonymous">
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
         <link href="static/css/main.css" rel="stylesheet">
+        <link href="static/css/button.css" rel="stylesheet">
         <link href="static/css/filter.css" rel="stylesheet">
         <link href="static/css/base.css" rel="stylesheet">
         <link href="static/css/popup.css" rel="stylesheet">
