--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -1,12 +1,12 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body, html {
-  height: 100%;
-  font-family: Arial, sans-serif;
+    height: 100%;
+    font-family: Arial, sans-serif;
 }
 
 body {
@@ -18,7 +18,7 @@ body {
     padding: 20px 30px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 600px;
+    width: 400px;
 }
 
 .form-group {
@@ -74,7 +74,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-     justify-content: space-around
+    justify-content: space-around
 }
 
 .container {
@@ -83,4 +83,14 @@ body {
     display: flex;
     height: 100%;
     flex-direction: column;
+}
+
+.login-image {
+    height: 500px;
+}
+
+@media (max-width: 380px) {
+    .login-image {
+        height: 300px;
+    }
 }
