--- a/app/presentation/template/lib/sw_hw_new_form.html
+++ b/app/presentation/template/lib/sw_hw_new_form.html
@@ -34,7 +34,7 @@
         <button id="laptop-code-scan" class="btn btn-success">Scan laptop label</button>
     </div>
     <div class="form-row">
-        <div class="form-element"><label>Wachtwoord<input type="password" id="password-field" name="laptop_owner_password"></label></div>
+        <div class="form-element"><label>Wachtwoord<input id="password-field" name="laptop_owner_password"></label></div>
         <div class="form-element"><i id="password-show-field" class="fa-regular fa-eye-slash"></i></div>
         <div class="form-element"><label><input type="checkbox" id="password-default-chk" name="laptop_owner_password_default">Standaard paswoord?</label></div>
     </div>
