--- a/app/presentation/template/forms/history.html
+++ b/app/presentation/template/forms/history.html
@@ -2,11 +2,6 @@
 <form id="history-form">
     <div class="form-row">
         <div class="form-element">
-            <label>Type laptop<input id="laptop-type-field" name="laptop_type"></label>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-element">
             <label>LIS badgenummer<input id="lis-badge-field" name="lis_badge_id" disabled></label>
         </div>
     </div>
@@ -23,7 +18,7 @@
     <div class="form-row">
         <div class="form-element">
             <table id="history-table">
-                <tr><th>Hersteller</th><th>Prio</th><th>Status</th><th>Locatie</th><th>Info</th><th>Datum</th><th>Type</th><th>Val</th><th>Water</th></tr>
+                <tr><th>Datum</th><th>Hersteller</th><th>Prio</th><th>Status</th><th>Locatie</th><th>Info</th><th>Type</th><th>Val</th><th>Water</th></tr>
             </table>
         </div>
     </div>
