--- a/app/presentation/template/forms/sw_hw_update.html
+++ b/app/presentation/template/forms/sw_hw_update.html
@@ -32,8 +32,8 @@
             <label>Type incident<select id="lis-type-field" name="incident_type"></select></label>
         </div>
         <div id="hardware-damage-group">
-            <div class="form-element"><label><input type="checkbox" id="drop-damage-chk" name="drop_damage">Valschade?</label></div>
-            <div class="form-element"><label><input type="checkbox" id="water-damage-chk" name="water_damage">Waterschade?</label></div>
+            <label>M4S Categorie<input id="m4s-category-field" name="m4s_category" disabled></label>
+            <label>M4S Probleem<input id="m4s-problem-type-guid-field" name="m4s_problem_type_guid" disabled></label>
         </div>
     </div>
     <div class="form-row" hidden>
